--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "FF Posters",
   "description": "Discover the latest Free Fire posters, event banners, and news from all regions",
   "start_url": "/",
-  "display": "standalone",
+  "display": "browser",
   "background_color": "#000000",
   "theme_color": "#000000",
   "orientation": "portrait-primary",
